--- a/index.html
+++ b/index.html
@@ -8,14 +8,31 @@
   </head>
 
   <body>
-    <header>
-
-    </header>
+    <header></header>
     <main>
 
-    </main>
-    <footer>
+      <div class="container">
+        <div class="step-img1"></div>
+        <span class="step-logo">step1</span>
+        <h3 class="title">タイトルが入ります</h3>
+        <p class="text">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
+      </div>
 
-    </footer>
+      <div class="container">
+        <div class="step-img2"></div>
+        <span class="step-logo">step2</span>
+        <h3 class="title">タイトルが入ります</h3>
+        <p class="text">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
+      </div>
+
+      <div class="container">
+        <div class="step-img3"></div>
+        <span class="step-logo">step3</span>
+        <h3 class="title">タイトルが入ります</h3>
+        <p class="text">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
+      </div>
+
+    </main>
+    <footer></footer>
   </body>
 </html>
